renamed instances of message to event
