# handlers/base.go
@@ -1,5 +1,5 @@
 package handlers
 
 type BaseResponse struct {
-	StatusMessage string `json:"status_message"`
+	StatusEvent string `json:"status_event"`
 }
